fixing logo view on mobile

--- a/final-assignment/assets/css/global.css
+++ b/final-assignment/assets/css/global.css
@@ -219,3 +219,7 @@ nav ul a:hover
         gap: 40px;
         padding: 40px 20px 0;
     }
+
+    nav img{
+        height: 30px;
+    }
